appa-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "appa-deployment"
  namespace: "webservers"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "appa"
    spec:
      containers:
      - image: 255033994748.dkr.ecr.us-east-1.amazonaws.com/appa:latest 
        imagePullPolicy: Always
        name: "appa"
        ports:
        - containerPort: 5000
