appb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "appb-deployment"
  namespace: "webservers"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "appb"
    spec:
      containers:
      - image: 255033994748.dkr.ecr.us-east-1.amazonaws.com/appb:latest
        imagePullPolicy: Always
        name: "appb"
        ports:
        - containerPort: 5000
