appb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-appb"
  namespace: "webservers"
spec:
  ports:
    - port: 80
      targetPort: 5000 
      protocol: TCP
  type: NodePort
  selector:
    app: "appb"
